--- a/source/components/wi-dropdown/wi-dropdown.html
+++ b/source/components/wi-dropdown/wi-dropdown.html
@@ -2,8 +2,9 @@
     <button class="dropdown-toggle" type="button" data-toggle="dropdown" ng-click="wiDropdown.onClick()">
         <img class="{{wiDropdown.icon || wiDropdown.config.icon || wiDropdown.default.icon}}" alt="icon wi-dropdown">
         <div class="label-wrapper {{wiDropdown.layout || wiDropdown.config.layout || wiDropdown.default.layout}}">
-            <span class="{{wiDropdown.layout || wiDropdown.config.layout || wiDropdown.default.layout}}">
-                {{wiDropdown.label || wiDropdown.config.label || wiDropdown.default.label}}</span>
+            <span class="{{wiDropdown.layout || wiDropdown.config.layout || wiDropdown.default.layout}}"
+                  ng-show="wiDropdown.label || wiDropdown.config.label">
+                {{wiDropdown.label || wiDropdown.config.label}}</span>
             <span class="caret"></span>
         </div>
     </button>
