--- a/source/components/wi-list/wi-list-test.html
+++ b/source/components/wi-list/wi-list-test.html
@@ -11,7 +11,8 @@
 
 <body ng-app='helloapp'>
 <div ng-controller="WiDummy">
-    <wi-list heading="My heading" items="myListItems"></wi-list>
+    <wi-list name="MyList1" heading="My list 1" items="myListItems" handler="myHandler"></wi-list>
+    <button ng-click="myHandler()">Change List's heading</button>
 </div>
 </body>
 </html>
