test golden layout

--- a/source/components/wi-treeview/wi-treeview-test.html
+++ b/source/components/wi-treeview/wi-treeview-test.html
@@ -19,7 +19,9 @@
 
 <body ng-app='helloapp'>
 <div ng-controller="WiDummy">
-    <wi-treeview config="myConfig"></wi-treeview>
+    <div style="width:50%">
+        <wi-treeview config="myConfig"></wi-treeview>
+    </div>
 </div>
 </body>
 </html>
