--- a/source/less/main.less
+++ b/source/less/main.less
@@ -1,3 +1,12 @@
 .wi-hidden {
   visibility: hidden;
 }
+/*.lm_item {
+    border: 1px solid black;
+}*/
+#myLayout {
+    width: 100%;
+    height: 500px;
+    padding:0;
+    margin: 0;
+}
