--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -9,7 +9,7 @@ wi-slidingbar {
     background-color: transparent;
   }
 
-  #sliding-bar-content {
+  .sliding-bar-content {
     position: absolute;
     top: 0;
     left: 0;
@@ -18,7 +18,7 @@ wi-slidingbar {
     overflow: hidden;
   }
 
-  #sliding-handle {
+  .sliding-handle {
     border: 0;
   }
 
