--- a/source/less/ribbon-block/ribbon-block.less
+++ b/source/less/ribbon-block/ribbon-block.less
@@ -1,4 +1,7 @@
 .ribbon-wrapper {
-  border: 2px solid #5bc0de;
   width: 100%;
+  font-size: 13px;
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
+  position: relative;
+  z-index: 2;
 }
