--- a/source/less/status-bar/status-bar.less
+++ b/source/less/status-bar/status-bar.less
@@ -1,5 +1,7 @@
 .status-bar {
   height: 50px;
   width: 100%;
-  border: 2px solid #2b542c;
+  background: #d0d1d7;
+  border: 1px solid #9da0aa;
+  box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.3);
 }
