--- a/source/less/workspace-block/explorer-block.less
+++ b/source/less/workspace-block/explorer-block.less
@@ -1,5 +1,7 @@
 .explorer-block {
   display: block;
   width: 240px;
-  border: 2px solid #5e5e5e;
+  background: #fff;
+  border: 1px solid #9da0aa;
+  box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.3);
 }
