--- a/source/less/workspace-block/working-block.less
+++ b/source/less/workspace-block/working-block.less
@@ -1,12 +1,14 @@
 .working-block {
   display: flex;
   flex: 1;
-  border: 2px solid #2a6496;
-  padding: 5px;
+  padding:0 0 0 5px;  
 
   wi-workingtabset {
     flex: 1;
     display: flex;
+    border: 1px solid #9da0aa;
+    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.3);
+    background: #fff;
 
     wi-workingtab {
       flex: 1;
