--- a/source/components/wi-dropdown/wi-dropdown.less
+++ b/source/components/wi-dropdown/wi-dropdown.less
@@ -1,9 +1,33 @@
 wi-dropdown {
-
+  border-left: 1px solid transparent;
+  -moz-border-image: -moz-linear-gradient(to bottom, rgba(180,182,191,0) 0%, rgba(180,182,191,1) 51%, rgba(180,182,191,0) 100%);
+  -webkit-border-image: -webkit-linear-gradient(to bottom, rgba(180,182,191,0) 0%, rgba(180,182,191,1) 51%, rgba(180,182,191,0) 100%);
+  border-image: linear-gradient(to bottom, rgba(180,182,191,0) 0%, rgba(180,182,191,1) 51%, rgba(180,182,191,0) 100%);
+  border-image-slice: 1;
   display: inline-block;
 
+  button{
+    background: none;
+    border:none; 
+    font-size: 12px;
+    border: 1px solid transparent;
+    &:hover{
+      border: 1px solid #b3b6ba;
+      border-radius:2px;
+      background: rgba(214,226,253,1);
+      background: -moz-linear-gradient(top, rgba(214,226,253,1) 0%, rgba(233,236,247,1) 100%);
+      background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(214,226,253,1)), color-stop(100%, rgba(233,236,247,1)));
+      background: -webkit-linear-gradient(top, rgba(214,226,253,1) 0%, rgba(233,236,247,1) 100%);
+      background: -o-linear-gradient(top, rgba(214,226,253,1) 0%, rgba(233,236,247,1) 100%);
+      background: -ms-linear-gradient(top, rgba(214,226,253,1) 0%, rgba(233,236,247,1) 100%);
+      background: linear-gradient(to bottom, rgba(214,226,253,1) 0%, rgba(233,236,247,1) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6e2fd', endColorstr='#e9ecf7', GradientType=0 ); 
+      box-shadow: inset 0px 1px 5px 0px rgba(0,0,0,0.15);
+    }
+  }
+
   wi-button {
-    display: block;
+    display: block;    
   }
 
   .dropdown-menu {
