--- a/source/components/wi-tabs/wi-tab.less
+++ b/source/components/wi-tabs/wi-tab.less
@@ -1,14 +1,33 @@
 wi-tabset {
-
   display: block;
-
+  .nav-tabs{
+    background: #c8c9d0;
+    padding: 5px 0 0 7px;
+    border-bottom: 1px solid #a8aab4;
+  }
   wi-tab {
     display: block;
+    & > div{
+      border-bottom: 1px solid #a8aab4;
+      border-right: 1px solid #a8aab4;
+      border-left: 1px solid #a8aab4;
+      background: rgba(255,255,255,1);
+      background: -moz-linear-gradient(top, rgba(255,255,255,1) 13%, rgba(250,250,252,1) 42%, rgba(240,241,245,1) 100%);
+      background: -webkit-gradient(left top, left bottom, color-stop(13%, rgba(255,255,255,1)), color-stop(42%, rgba(250,250,252,1)), color-stop(100%, rgba(240,241,245,1)));
+      background: -webkit-linear-gradient(top, rgba(255,255,255,1) 13%, rgba(250,250,252,1) 42%, rgba(240,241,245,1) 100%);
+      background: -o-linear-gradient(top, rgba(255,255,255,1) 13%, rgba(250,250,252,1) 42%, rgba(240,241,245,1) 100%);
+      background: -ms-linear-gradient(top, rgba(255,255,255,1) 13%, rgba(250,250,252,1) 42%, rgba(240,241,245,1) 100%);
+      background: linear-gradient(to bottom, rgba(255,255,255,1) 13%, rgba(250,250,252,1) 42%, rgba(240,241,245,1) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f0f1f5', GradientType=0 );
+      }
   }
 
   li.wi-tab.active {
-    border: 1px solid #ddd;
+    border: 1px solid #a8aab4;
     border-bottom-color: transparent;
+    background: #fff;
+    border-radius:2px; 
+    box-shadow: 3px -2px 2px -2px rgba(0,0,0,0.13);
   }
   /* khu border */
   li.wi-tab.active > a,
@@ -16,14 +35,20 @@ wi-tabset {
   li.wi-tab > a,
   li.wi-tab.active > a:hover {
     border: none;
+    font-weight: 700;
   }
 
   li.wi-tab {
     cursor: pointer;
-    padding: 5px 10px;
+    padding: 5px 15px;
     & > a {
       display: inline-block;
       padding: 0;
+      background: transparent;
+      color: #000;
+      &:hover{
+        background: none;
+      }
     }
     & > i {
       font-size: 50%;
