--- a/source/less/workspace-block/workspace-block.less
+++ b/source/less/workspace-block/workspace-block.less
@@ -2,5 +2,8 @@
   width: 100%;
   height: 500px;
   display: flex;
-  border: 1px solid red;
+  background: #e5e6e8;
+  padding: 5px;
+  z-index: 1;
+  position: relative;
 }
