update border tabset

--- a/source/components/wi-toolbar/wi-toolbar.less
+++ b/source/components/wi-toolbar/wi-toolbar.less
@@ -25,6 +25,12 @@ wi-toolbar {
     }
 }
 
+wi-toolbar:nth-child(n+1){
+    wi-dropdown:first-child{
+        border: none;
+    }
+}
+
 .toolbar-wrapper {
     & > div{
         border-bottom: 1px solid transparent;
