--- a/source/app/components/wi-workingtab/wi-workingtabs-test.html
+++ b/source/app/components/wi-workingtab/wi-workingtabs-test.html
@@ -3,6 +3,7 @@
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/css/jquery-ui.css" rel="stylesheet">
     <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
+    <link href="vendor/css/themify-icons.css" rel="stylesheet">
 
     <link href='css/main.css' rel='stylesheet'>
     <link href='css/wi-button.css' rel='stylesheet'>
@@ -29,7 +30,7 @@
 <div ng-controller="WiDummy">
     <div class="container" style="display: flex; height: 500px; width: 700px; border: 1px solid #5e5e5e; padding: 5px;">
         <wi-workingtabset tab-configs="workingTabs" style="flex: 1;">
-            <wi-workingtab heading="{{tab.heading}}" closable="{{tab.closable}}" ng-repeat="tab in workingTabs" ng-switch="tab.type" ng-class="{'wi-display-none': !tab.active}">
+            <wi-workingtab type="{{tab.type}}" name="{{tab.name}}" heading="{{tab.heading}}" closable="{{tab.closable}}" ng-repeat="tab in workingTabs" ng-switch="tab.type" ng-class="{'wi-display-none': !tab.active}">
                 <div class="working-tab-content" ng-switch-when="dogs" >
                     <h1>Dogs</h1>
                     <p>Welcome to a world of dogs.</p>
@@ -46,7 +47,7 @@
                 </div>
 
                 <div class="working-tab-content working-logplot-tab-container" ng-switch-when="logplot">
-                    <wi-logplot name="{{tab.name}}"></wi-logplot>
+                    <wi-logplot name="{{tab.name}}Logplot"></wi-logplot>
                 </div>
 
                 <div class="working-tab-content" ng-switch-default>
