add layout.js module for layout management

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -1,12 +1,23 @@
 .wi-hidden {
   visibility: hidden;
 }
-/*.lm_item {
-    border: 1px solid black;
-}*/
+.main {
+    display: flex;
+    flex-direction: column;
+    height: 99%;
+    width: 100%;
+}
 #myLayout {
     width: 100%;
-    height: 500px;
-    padding:0;
-    margin: 0;
+    flex: 1 1 auto;
+}
+.status-bar {
+    width: 100%;
+    min-height: 30px;
+    max-height: 30px;
+}
+
+.ribbon-wrapper {
+    width: 100%;
+    min-height: 132px;
 }
