Modify unit seeting modal

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -3,6 +3,16 @@ img {
 	display: inline-block;
 }
 
+.modal-infomation-title {
+
+}
+
+.form-horizontal .control-label {
+    text-align: left;
+	font-style: normal !important;
+
+}
+
 .modal-footer button {
 	width: 100px;
 }
@@ -37,45 +47,7 @@ img {
 .padding-100px {
 	padding: 100px 0;
 }
-.padding-tb-small {
-	padding: 4px 0px;
-
-}
-.small-text {
-	font-size: 11px;
-}
-.condensed-text {
-	letter-spacing: -1px;
-}
-.tiny-text {
-	font-size: 9px;
-	line-height: 1.1;
-}
-.wi-form-control {
-	height: auto;
-	padding: 2px 8px;
-}
 input[required] {
 	background-color: #ffe0e0;
     border: 1px solid #faa;
-}
-.areaWrap {
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	padding: 10px;
-	width: 100%;
-	height: 100%;
-}
-.fixedHeight {
-	height: 500px;
-	margin-top: 5px;
-	border: 1px solid #ccc;
-}
-.noneArea {
-	background-color: #eff0f2;
-	color: #bfc9dd;
-	display: block;
-}
-label.radio-inline {
-	padding-left: 30px;
 }
