--- a/source/components/wi-button/wi-button.less
+++ b/source/components/wi-button/wi-button.less
@@ -26,3 +26,11 @@ wi-button, wi-toolbar-button {
   display: inline-block;
   margin: 0;
 }
+
+.normal {
+    padding: 10px;
+}
+
+.small {
+    padding: 0px;
+}
