--- a/source/components/wi-button/wi-button.less
+++ b/source/components/wi-button/wi-button.less
@@ -27,10 +27,10 @@ wi-button, wi-toolbar-button {
   margin: 0;
 }
 
-.normal {
+.button-normal {
     padding: 10px;
 }
 
-.small {
+.button-small {
     padding: 0px;
 }
