wi-toolbar: add type: horizontal or vertical

--- a/source/components/wi-toolbar/wi-toolbar.less
+++ b/source/components/wi-toolbar/wi-toolbar.less
@@ -1,20 +1,25 @@
 wi-toolbar {
     display:inline-block;
+    margin: 1px;
     & > div {
         padding: 2px;
         background-color: #f0f0f0;
-        & > div {
-        }
-        & > .wi-toolbar-label {
-            margin: 0.2em;
-            padding: 0.2em;
-            text-align: center;
-            width: 100%;
-            background-color: darkgray ;
-        }
+    }
+    & > .wi-toolbar-label {
+        margin: 0.2em;
+        padding: 0.2em;
+        text-align: center;
+        width: 100%;
+        background-color: darkgray ;
     }
 }
 
-.toolbar-wrapper {
-    margin: 1px;
+.toolbar-vertical {
+
+}
+
+.toolbar-horizontal {
+    & > wi-button {
+        display: block;
+    }
 }
