wi-list: change name, add item by component service

--- a/source/components/wi-list/wi-list.html
+++ b/source/components/wi-list/wi-list.html
@@ -1,4 +1,4 @@
-<h4>{{wiList.heading}}</h4>
+<p class="list-heading">{{wiList.heading}}</p>
 <table>
     <tr ng-repeat="item in wiList.items">
         <td>{{item.key}}</td>
