--- a/source/less/workspace-block/explorer-block.less
+++ b/source/less/workspace-block/explorer-block.less
@@ -4,11 +4,13 @@
   width: 240px;
   border: 2px solid #5e5e5e;
 
-  wi-treeview {
+  .treeview-wrapper {
     flex: 1;
+
+    border: 1px solid darkgreen;
   }
 
-  wi-list {
-    flex: 1;
+  .list-wrapper {
+    border: 1px solid orangered;
   }
 }
