--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -7,10 +7,6 @@ img {
 
 }
 
-.form-horizontal .control-label {
-    text-align: left;
-
-}
 
 .modal-footer button {
 	width: 100px;
@@ -45,6 +41,24 @@ img {
 }
 .padding-100px {
 	padding: 100px 0;
+}
+.padding-tb-small {
+	padding: 4px 0px;
+
+}
+.small-text {
+	font-size: 11px;
+}
+.condensed-text {
+	letter-spacing: -1px;
+}
+.tiny-text {
+	font-size: 9px;
+	line-height: 1.1;
+}
+.wi-form-control {
+	height: auto;
+	padding: 2px 8px;
 }
 input[required] {
 	background-color: #ffe0e0;
