wi-logplot: update type button in toolbar

--- a/source/app/components/wi-logplot/wi-logplot.html
+++ b/source/app/components/wi-logplot/wi-logplot.html
@@ -1,11 +1,11 @@
 <div class="logplot-toolbar-wrapper">
     <wi-toolbal>
-        <wi-button layout="icon-left"></wi-button>
-        <wi-button layout="icon-left"></wi-button>
+        <wi-button type="small" layout="icon-left"></wi-button>
+        <wi-button type="small" layout="icon-left"></wi-button>
     </wi-toolbal>
     <wi-toolbar>
-        <wi-button layout="icon-left"></wi-button>
-        <wi-button layout="icon-left"></wi-button>
+        <wi-button type="small" layout="icon-left"></wi-button>
+        <wi-button type="small" layout="icon-left"></wi-button>
     </wi-toolbar>
 </div>
 <div class="logplot-main-content">
