resolve conflict toolbar.less with gui branch

--- a/source/components/wi-toolbar/wi-toolbar.html
+++ b/source/components/wi-toolbar/wi-toolbar.html
@@ -1,2 +1,4 @@
-<div ng-transclude class="toolbar-{{wiToolbar.type || wiToolbar.default.type}}"></div>
-<p class='wi-toolbar-label' ng-show="wiToolbar.label && wiToolbar.label.length > 0">{{wiToolbar.label}}</p>
+<div class="toolbar-wrapper">
+    <div ng-transclude class="toolbar-{{wiToolbar.type || wiToolbar.default.type}}"></div>
+    <p class='wi-toolbar-label' ng-show="wiToolbar.label && wiToolbar.label.length > 0">{{wiToolbar.label}}</p>
+</div>
