--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -3,7 +3,8 @@ wi-slidingbar {
   display: block;
   background-color: #2b542c;
   overflow: hidden;
-
+  width: 100%;
+  flex: 1;
   .ui-widget-content {
     width: 100%;
     background-color: transparent;
