--- a/source/less/main.less
+++ b/source/less/main.less
@@ -23,9 +23,9 @@ input, button, textarea, select{
 
 .ribbon-wrapper {
     width: 100%;
-//    min-height: 132px;
+    min-height: 139px;
 }
 
-.lm_content {
+div.lm_content {
     overflow-y: scroll;
 }
