--- a/source/app/components/wi-logplot/wi-logplot.html
+++ b/source/app/components/wi-logplot/wi-logplot.html
@@ -1,13 +1,13 @@
 <div class="logplot-toolbar-wrapper">
     
     <wi-toolbar name="Toolbar" label="" icon="">
-    		<wi-button name="Button1Button" label="" icon="help-32x32" handler="handlers.Button1ButtonClicked">
+    		<wi-button name="Button1Button" label="" icon="help-16x16" handler="handlers.Button1ButtonClicked">
 
     		</wi-button>
-    		<wi-button name="Button2Button" label="" icon="info-frp-32x32" handler="handlers.Button2ButtonClicked">
+    		<wi-button name="Button2Button" label="" icon="info-frp-16x16" handler="handlers.Button2ButtonClicked">
 
     		</wi-button>
-    		<wi-button name="Button3Button" label="" icon="" handler="handlers.Button3ButtonClicked">
+    		<wi-button name="Button3Button" label="" icon="project-new-16x16" handler="handlers.Button3ButtonClicked">
 
     		</wi-button>
 
@@ -15,8 +15,12 @@
 
 </div>
 <div class="logplot-main-content">
-    <wi-slidingbar name="{{wiLogplot.slidingbarName}}" ng-init="wiLogplot.getSlidingbarCtrl()">
-        <p>Some thing like curve</p>
-    </wi-slidingbar>
-    <div class="logplot-sub-content">Some tracks: {{wiLogplot.slidingBar.slidingBarState.top}} -- {{wiLogplot.slidingBar.slidingBarState.range}}</div>
+    <div class='slidingbar'>
+        <wi-slidingbar name="{{wiLogplot.slidingbarName}}" ng-init="wiLogplot.getSlidingbarCtrl()">
+            <p>Some thing like curve</p>
+        </wi-slidingbar>
+    </div>
+    <div class="track-area">
+        Some tracks: {{wiLogplot.slidingBar.slidingBarState.top}} -- {{wiLogplot.slidingBar.slidingBarState.range}}
+    </div>
 </div>
