update, add wi-d3

--- a/source/components/wi-slidingbar/wi-slidingbar.less
+++ b/source/components/wi-slidingbar/wi-slidingbar.less
@@ -1,7 +1,10 @@
 wi-slidingbar {
   position: relative;
   display: block;
-  background-color: #2b542c;
+  //background-color: #2b542c;
+  background-color: #fff;
+  margin: 4px;
+  padding: 4px;
   overflow: hidden;
   width: 100%;
   flex: 1;
@@ -23,12 +26,13 @@ wi-slidingbar {
     border: 0;
   }
 
-  .sliding-handler-border {
+  .sliding-handle-border {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    border: 1px solid white;
+    //border: 1px solid white;
+    background-color: rgba(255, 128, 128, 0.5);
   }
 }
