--- a/source/app/components/wi-logplot/wi-logplot.html
+++ b/source/app/components/wi-logplot/wi-logplot.html
@@ -17,10 +17,11 @@
 <div class="logplot-main-content">
     <div class='slidingbar'>
         <wi-slidingbar name="{{wiLogplot.slidingbarName}}" ng-init="wiLogplot.getSlidingbarCtrl()">
-            <p>Some thing like curve</p>
         </wi-slidingbar>
     </div>
     <div class="track-area">
-        Some tracks: {{wiLogplot.slidingBar.slidingBarState.top}} -- {{wiLogplot.slidingBar.slidingBarState.range}}
+<!--        Some tracks: {{wiLogplot.slidingBar.slidingBarState.top}} : {{wiLogplot.slidingBar.slidingBarState.range}} -->
+        <wi-d3 style="width: 100%; flex: 1; display: flex;" 
+            name='{{wiLogplot.wiD3AreaName}}'></wi-d3>
     </div>
 </div>
