--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -19,8 +19,12 @@ wi-logplot {
         }
 
         .track-area {
-            border: 1px solid red;
+            background-color: #fff;
+            margin: 4px;
+            padding: 4px;
             flex: 1;
+            display: flex;
+            flex-direction: row;
         }
     }
 }
