Mo working on dialogs

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -59,3 +59,20 @@ input[required] {
 	background-color: #ffe0e0;
     border: 1px solid #faa;
 }
+.areaWrap {
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding: 10px;
+	width: 100%;
+	height: 100%;
+}
+.fixedHeight {
+	height: 500px;
+	margin-top: 5px;
+	border: 1px solid #ccc;
+}
+.noneArea {
+	background-color: #eff0f2;
+	color: #bfc9dd;
+	display: block;
+}
