--- a/source/components/wi-button/wi-button.less
+++ b/source/components/wi-button/wi-button.less
@@ -46,7 +46,8 @@ wi-button, wi-toolbar-button {
 }
 
 .button-normal {
-    padding: 10px;
+    padding: 2px 5px 5px 5px;
+    min-height: 70px;
 }
 
 .button-small {
