--- a/source/components/wi-dropdown/wi-dropdown.less
+++ b/source/components/wi-dropdown/wi-dropdown.less
@@ -11,6 +11,7 @@ wi-dropdown {
     border:none; 
     font-size: 12px;
     border: 1px solid transparent;
+    padding: 5px;
     &:hover{
       border: 1px solid #b3b6ba;
       border-radius:2px;
