--- a/source/components/wi-tabs/wi-tab.less
+++ b/source/components/wi-tabs/wi-tab.less
@@ -2,7 +2,7 @@ wi-tabset {
   display: block;
   .nav-tabs{
     background: #c8c9d0;
-    padding: 5px 0 0 7px;
+    padding: 3px 0 0 5px;
     border-bottom: 1px solid #a8aab4;
   }
   wi-tab {
@@ -40,12 +40,13 @@ wi-tabset {
 
   li.wi-tab {
     cursor: pointer;
-    padding: 5px 15px;
+    padding: 3px 12px;
     & > a {
       display: inline-block;
       padding: 0;
       background: transparent;
       color: #000;
+      font-size: 12px;
       &:hover{
         background: none;
       }
