--- a/source/less/main.less
+++ b/source/less/main.less
@@ -1,4 +1,3 @@
-@width: 90%;
 input, button, textarea, select{
 	&:focus{
 		outline: none;
@@ -10,23 +9,49 @@ input, button, textarea, select{
 .main {
     display: flex;
     flex-direction: column;
-    height: 99%;
-    width: @width;
+    height: 100%;
+    width: 100%;
+    font-size: 12px;
 }
 #myLayout {
-    width: @width;
-    flex: 1 1 auto;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1 1 auto;    
 }
 .status-bar {
-    width: @width;
+    width: 100%;
     min-height: 30px;
 }
-
-.ribbon-wrapper {
-    width: @width;
-    min-height: 139px;
+.lm_goldenlayout{
+    padding: 10px 5px;
 }
-
 .lm_content {
     overflow-y: scroll;
+}
+
+.label_treeview{
+    width: 96%;
+    margin: 10px auto 0 auto;
+    border: 1px solid #cacbd3;
+    background: rgba(248,248,249,1);
+    background: -moz-linear-gradient(top, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(248,248,249,1)), color-stop(100%, rgba(242,243,244,1)));
+    background: -webkit-linear-gradient(top, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
+    background: -o-linear-gradient(top, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
+    background: -ms-linear-gradient(top, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
+    background: linear-gradient(to bottom, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8f8f9', endColorstr='#f2f3f4', GradientType=0 );
+    span{
+        text-align: left;
+        display: inline-block;
+        text-indent: 10px;
+    }
+    span:first-child{
+        border-right: 1px solid #cacbd3;
+        width: 75%;
+    }
+    span:last-child{
+        width: 25%;
+    }
 }
