--- a/source/less/ribbon-block/ribbon-block.less
+++ b/source/less/ribbon-block/ribbon-block.less
@@ -1,8 +1,7 @@
-/*
 .ribbon-wrapper {
   width: 100%;
-  font-size: 13px;
+  font-size: 12px;
   box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
   position: relative;
   z-index: 2;
-}*/
+}
