add tab to working space

--- a/source/app/components/wi-logplot/wi-logplot.html
+++ b/source/app/components/wi-logplot/wi-logplot.html
@@ -1,5 +1,18 @@
 <div class="logplot-toolbar-wrapper">
     
+    <wi-toolbar name="Toolbar" label="" icon="">
+    		<wi-button name="Button1Button" label="" icon="help-32x32" handler="handlers.Button1ButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="Button2Button" label="" icon="info-frp-32x32" handler="handlers.Button2ButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="Button3Button" label="" icon="" handler="handlers.Button3ButtonClicked">
+
+    		</wi-button>
+
+    </wi-toolbar>
+
 </div>
 <div class="logplot-main-content">
     <div class='slidingbar'>
