--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -25,6 +25,10 @@ wi-logplot {
             flex: 1;
             display: flex;
             flex-direction: row;
+
+            wi-d3 {
+                width: 100%; flex: 1; display: flex;
+            }
         }
     }
 }
