--- a/source/components/wi-treeview/wi-treeview.less
+++ b/source/components/wi-treeview/wi-treeview.less
@@ -5,6 +5,7 @@ wi-treeview {
     .wi-treeview-container {
         display: block;
         cursor: pointer;
+
         .wi-parent-node {
             position: relative;
             border-bottom: 1px dotted lightgray;
@@ -25,6 +26,11 @@ wi-treeview {
             .icon-expanded {
                 min-width: 8px;
             }
+        }
+
+        .item-active {
+            background-color: lightgray;
+            opacity: 0.7;
         }
     }
 
