--- a/source/components/wi-list/wi-list.less
+++ b/source/components/wi-list/wi-list.less
@@ -14,7 +14,18 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
-.list-heading {
-  padding: 2px;
-  margin: 0;
+.list-header-wrapper {
+  display: flex;
+  padding-right: 5px;
+
+  .list-heading {
+    display: inline-block;
+    flex: 1;
+    padding: 2px;
+    margin: 0;
+  }
+
+  .list-expanded {
+    cursor: pointer;
+  }
 }
