--- a/source/less/main.less
+++ b/source/less/main.less
@@ -10,22 +10,29 @@ input, button, textarea, select{
 .main {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: ~"calc(100% - 6px)";
     width: 100%;
     font-size: 12px;
 }
 #myLayout {
-    width: 100%;
+    width: ~"calc(100% - 5px)";
     display: flex;
     flex-wrap: wrap;
-    flex: 1 1 auto;    
+    flex: 1 1 auto;
+}
+.ribbon-wrapper {
+    height:126px;
 }
 .status-bar {
     width: 100%;
-    min-height: 30px;
+    height: 30px;
+    background-color: yellow;
+    border: 1px solid black;
+    z-index: 100;
 }
+
 .lm_goldenlayout{
-    padding: 10px 5px;
+    padding: 5px 0px;
 }
 
 div.lm_content {
@@ -33,8 +40,6 @@ div.lm_content {
 }
 
 .label_treeview{
-//    width: 96%;
-//    margin: 10px auto 0 auto;
     border-bottom: 1px solid #cacbd3;
     background: rgba(248,248,249,1);
     background: -moz-linear-gradient(top, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
@@ -67,4 +72,13 @@ div.lm_content {
 }
 .cursor-pointer {
     cursor: pointer;
+}
+
+label.flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-1 {
+    flex: 1;
 }
