--- a/source/components/wi-treeview/wi-treeview.less
+++ b/source/components/wi-treeview/wi-treeview.less
@@ -4,9 +4,11 @@ wi-treeview {
     border-bottom: 1px solid #cacbd3;
     font-size: 13px;
     
+/*
     .wi-treeview-container:nth-child(2n+2){
         background: #f9f9fc;
     }
+*/
     .wi-treeview-container {
         display: block;
         cursor: pointer;
@@ -17,7 +19,7 @@ wi-treeview {
         }
         .wi-parent-node {
             position: relative;
-
+            
             .wi-parent-description {
                 position: absolute;
                 right: 0;
@@ -33,8 +35,7 @@ wi-treeview {
         }
 
         .item-active {
-            background-color: lightgray;
-            opacity: 0.7;
+            color: blue;
         }
     }
 
