--- a/source/components/wi-list/wi-list.html
+++ b/source/components/wi-list/wi-list.html
@@ -1,5 +1,5 @@
 <p ng-click='wiList.shown = !wiList.shown' class="list-heading position-relative cursor-pointer">
-    <span class='text-left'>{{wiList.heading}}</span>
+    <span class='font-weight-700 text-left'>{{wiList.heading}}</span>
     <span ng-show='!wiList.shown' class='block-right'><i class='ti-plus'></i></span>
     <span ng-show='wiList.shown' class='block-right'><i class='ti-minus'></i></span>
 </p>
