--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -5,7 +5,9 @@
 .track-header {
     width: 100%;
     height: 100px;
+    overflow-y: scroll;
     label {
+        //font-size: 6px;
         display: block;
         border: 1px solid black;
         margin-bottom: 1px;
@@ -49,5 +51,8 @@ canvas, svg {
 }
 .resizer {
     width: 2px;
-    cursor: ew-resize;
+    cursor: col-resize;
+}
+.ref-line {
+    cursor: col-resize;
 }
