inject functions to explorer component

--- a/source/app/components/wi-explorer/wi-explorer.html
+++ b/source/app/components/wi-explorer/wi-explorer.html
@@ -1,5 +1,5 @@
 <wi-toolbar name="Toolbar" label="" icon="">
-    <wi-button name="Button1Button" label="" icon="help-16x16" handler="handlers.Button1ButtonClicked">
+    <wi-button name="TestToolbarExplorerButton" label="" icon="project-new-16x16" handler="handlers.TestToolbarExplorerButtonClicked">
 
     </wi-button>
     <wi-button name="Button2Button" label="" icon="info-frp-16x16" handler="handlers.Button2ButtonClicked">
