--- a/source/components/wi-button/wi-button.html
+++ b/source/components/wi-button/wi-button.html
@@ -1,5 +1,7 @@
 <div>
-    <button ng-click="wiButton.onClick()" class="button-{{wiButton.type || wiButton.config.type || wiButton.default.type}}">
+    <button ng-click="wiButton.onClick()"
+            class="button-{{wiButton.type || wiButton.config.type || wiButton.default.type}}"
+            ng-disabled="wiButton.disabled">
         <img class="{{wiButton.icon || wiButton.config.icon || wiButton.default.icon}}" alt="icon wi-button">
         <p class="{{wiButton.layout || wiButton.config.layout || wiButton.default.layout}}"
         ng-show="wiButton.label != null || wiButton.config.label != null">
