up date HTML CSS, chua update Exel

--- a/source/components/wi-button/wi-button.less
+++ b/source/components/wi-button/wi-button.less
@@ -1,5 +1,5 @@
 wi-button, wi-toolbar-button {
-    display: inline-block;
+    float: left;
     & > div {
         display:block;
         & > button {
@@ -47,9 +47,9 @@ wi-button, wi-toolbar-button {
 
 .button-normal {
     padding: 2px 5px 5px 5px;
-    min-height: 70px;
 }
 
 .button-small {
     padding: 0px;
 }
+
