generate explorer file, change gulp file: pre, build, default

--- a/source/app/components/wi-explorer/template/toolbar/index.html
+++ b/source/app/components/wi-explorer/template/toolbar/index.html
@@ -1,12 +1,12 @@
 
 <wi-toolbar name="Toolbar" label="" icon="">
-		<wi-button name="Button1Button" label="" icon="help-32x32" handler="handlers.Button1ButtonClicked">
+		<wi-button name="ExplorerButton1Button" label="" icon="help-32x32" handler="handlers.ExplorerButton1ButtonClicked">
 
 		</wi-button>
-		<wi-button name="Button2Button" label="" icon="info-frp-32x32" handler="handlers.Button2ButtonClicked">
+		<wi-button name="ExplorerButton2Button" label="" icon="info-frp-32x32" handler="handlers.ExplorerButton2ButtonClicked">
 
 		</wi-button>
-		<wi-button name="Button3Button" label="" icon="" handler="handlers.Button3ButtonClicked">
+		<wi-button name="ExplorerButton3Button" label="" icon="" handler="handlers.ExplorerButton3ButtonClicked">
 
 		</wi-button>
 
