--- a/source/components/wi-treeview/wi-treeview.less
+++ b/source/components/wi-treeview/wi-treeview.less
@@ -4,13 +4,13 @@ wi-treeview {
     border-bottom: 1px solid #cacbd3;
     font-size: 13px;
     
-    .wi-treeview-container:nth-child(2n+2){
-        background: #f9f9fc;
+    .wi-treeview-container:nth-child(odd){
     }
     .wi-treeview-container {
         display: block;
         cursor: pointer;
         padding: 5px 0 5px 10px;
+        border-bottom: 1px dotted #ddd;
         wi-treeview{
             border: none;
             border-left: 1px dotted #cacbd3;
@@ -26,6 +26,7 @@ wi-treeview {
                 width: 25%; // use fixed width here!
                 overflow:hidden;
                 padding-right: 0.5em;
+                border-left: 1px dotted #ddd;
             }
             .icon-expanded {
                 min-width: 8px;
