change xlsx format and build pre task

--- a/source/app/components/wi-explorer/template/toolbar/index.html
+++ b/source/app/components/wi-explorer/template/toolbar/index.html
@@ -1,12 +1,12 @@
 
-<wi-toolbar name="Toolbar" label="" icon="">
-		<wi-button name="ExplorerButton1Button" label="" icon="help-32x32" handler="handlers.ExplorerButton1ButtonClicked">
+<wi-toolbar name="Toolbar" icon="" Description="" ="7">
+		<wi-button name="ExplorerButton1Button" icon="help-32x32" Description="" ="6" handler="handlers.ExplorerButton1ButtonClicked">
 
 		</wi-button>
-		<wi-button name="ExplorerButton2Button" label="" icon="info-frp-32x32" handler="handlers.ExplorerButton2ButtonClicked">
+		<wi-button name="ExplorerButton2Button" icon="info-frp-32x32" Description="" ="6" handler="handlers.ExplorerButton2ButtonClicked">
 
 		</wi-button>
-		<wi-button name="ExplorerButton3Button" label="" icon="" handler="handlers.ExplorerButton3ButtonClicked">
+		<wi-button name="ExplorerButton3Button" icon="" Description="" ="6" handler="handlers.ExplorerButton3ButtonClicked">
 
 		</wi-button>
 
