--- a/source/app/components/wi-logplot/template/toolbar/index.html
+++ b/source/app/components/wi-logplot/template/toolbar/index.html
@@ -1,12 +1,12 @@
 
-<wi-toolbar name="Toolbar" label="" icon="">
-		<wi-button name="Button1Button" label="" icon="help-32x32" handler="handlers.Button1ButtonClicked">
+<wi-toolbar name="Toolbar" icon="" Description="" ="7">
+		<wi-button name="Button1Button" icon="help-32x32" Description="" ="6" handler="handlers.Button1ButtonClicked">
 
 		</wi-button>
-		<wi-button name="Button2Button" label="" icon="info-frp-32x32" handler="handlers.Button2ButtonClicked">
+		<wi-button name="Button2Button" icon="info-frp-32x32" Description="" ="6" handler="handlers.Button2ButtonClicked">
 
 		</wi-button>
-		<wi-button name="Button3Button" label="" icon="" handler="handlers.Button3ButtonClicked">
+		<wi-button name="Button3Button" icon="" Description="" ="6" handler="handlers.Button3ButtonClicked">
 
 		</wi-button>
 
