--- a/source/less/main.less
+++ b/source/less/main.less
@@ -91,6 +91,9 @@ label.flex-row {
     height: 65px;
 }
 
+.width-250{
+    width: 250px;    
+}
 .width-290{
     width: 290px;    
 }
@@ -104,6 +107,7 @@ label.flex-row {
 }
 
 .width-290 .toolbar-vertical{
+//.width-250 .toolbar-vertical{
     padding: 4px 0;
 }
 
