change xlsx format and build pre task

--- a/source/app/components/wi-logplot/template/toolbar/index.html
+++ b/source/app/components/wi-logplot/template/toolbar/index.html
@@ -1,12 +1,12 @@
 
-<wi-toolbar name="Toolbar" icon="" Description="" ="7">
-		<wi-button name="Button1Button" icon="help-32x32" Description="" ="6" handler="handlers.Button1ButtonClicked">
+<wi-toolbar name="Databases1Toolbar" icon="" label="" layout="" description="" type="">
+		<wi-button name="Test1Button" icon="project-new-32x32" label="" layout="" description="" type="small" handler="handlers.Test1ButtonClicked">
 
 		</wi-button>
-		<wi-button name="Button2Button" icon="info-frp-32x32" Description="" ="6" handler="handlers.Button2ButtonClicked">
+		<wi-button name="Test2Button" icon="project-open-32x32" label="" layout="" description="" type="small" handler="handlers.Test2ButtonClicked">
 
 		</wi-button>
-		<wi-button name="Button3Button" icon="" Description="" ="6" handler="handlers.Button3ButtonClicked">
+		<wi-button name="Test3Button" icon="project-close-32x32" label="" layout="" description="" type="small" handler="handlers.Test3ButtonClicked">
 
 		</wi-button>
 
