--- a/source/app/components/wi-explorer/template/toolbar/index.html
+++ b/source/app/components/wi-explorer/template/toolbar/index.html
@@ -1,12 +1,12 @@
 
-<wi-toolbar name="Toolbar" icon="" Description="" ="7">
-		<wi-button name="ExplorerButton1Button" icon="help-32x32" Description="" ="6" handler="handlers.ExplorerButton1ButtonClicked">
+<wi-toolbar name="DatabasesToolbar" icon="" label="" layout="" description="" type="">
+		<wi-button name="NewProjectButton" icon="project-new-32x32" label="" layout="" description="" type="small" handler="handlers.NewProjectButtonClicked">
 
 		</wi-button>
-		<wi-button name="ExplorerButton2Button" icon="info-frp-32x32" Description="" ="6" handler="handlers.ExplorerButton2ButtonClicked">
+		<wi-button name="OpenProjectButton" icon="project-open-32x32" label="" layout="" description="" type="small" handler="handlers.OpenProjectButtonClicked">
 
 		</wi-button>
-		<wi-button name="ExplorerButton3Button" icon="" Description="" ="6" handler="handlers.ExplorerButton3ButtonClicked">
+		<wi-button name="CloseProjectButton" icon="project-close-32x32" label="" layout="" description="" type="small" handler="handlers.CloseProjectButtonClicked">
 
 		</wi-button>
 
