--- a/source/app/components/wi-logplot/wi-logplot.html
+++ b/source/app/components/wi-logplot/wi-logplot.html
@@ -1,15 +1,102 @@
 <div class="logplot-toolbar-wrapper">
     
     <wi-toolbar name="Databases1Toolbar" icon="" label="" layout="" description="" type="">
-    		<wi-button name="Test1Button" icon="project-new-32x32" label="" layout="" description="" type="small" handler="handlers.Test1ButtonClicked">
+    		<wi-button name="EditFormatButton" icon="" label="" layout="" description="" type="small" handler="handlers.EditFormatButtonClicked">
 
     		</wi-button>
-    		<wi-button name="Test2Button" icon="project-open-32x32" label="" layout="" description="" type="small" handler="handlers.Test2ButtonClicked">
+    		<wi-button name="SaveAsLogplotButton" icon="save-16x16" label="" layout="" description="" type="small" handler="handlers.SaveAsLogplotButtonClicked">
 
     		</wi-button>
-    		<wi-button name="Test3Button" icon="project-close-32x32" label="" layout="" description="" type="small" handler="handlers.Test3ButtonClicked">
+    		<wi-button name="SaveAsButton" icon="save-as-16x16" label="" layout="" description="" type="small" handler="handlers.SaveAsButtonClicked">
 
     		</wi-button>
+    		<wi-button name="PrintButton" icon="print-16x16" label="" layout="" description="" type="small" handler="handlers.PrintButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="PrintToImageButton" icon="" label="" layout="" description="" type="small" handler="handlers.PrintToImageButtonClicked">
+
+    		</wi-button>
+    		<wi-dropdown name="ScaleButton" icon="scale-16x16" label="" layout="" description="" type="small">
+
+    		</wi-dropdown>
+
+    </wi-toolbar>
+    <wi-toolbar name="Databases2Toolbar" icon="" label="" layout="" description="" type="small">
+    		<wi-button name="ZoomInButton" icon="zoom-in-16x16" label="" layout="" description="" type="small" handler="handlers.ZoomInButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="ZoomOutButton" icon="zoom-out-16x16" label="" layout="" description="" type="small" handler="handlers.ZoomOutButtonClicked">
+
+    		</wi-button>
+
+    </wi-toolbar>
+    <wi-toolbar name="Databases3Toolbar" icon="" label="" layout="" description="" type="small">
+    		<wi-button name="CropDisplayButton" icon="plot-range-16x16" label="" layout="" description="" type="small" handler="handlers.CropDisplayButtonClicked">
+
+    		</wi-button>
+    		<wi-dropdown name="RangeSpecificDropdown" icon="plot-range-specific-16x16" label="" layout="" description="" type="small">
+
+    		</wi-dropdown>
+    		<wi-button name="ViewWholeWellButton" icon="plot-whole-well-16x16" label="" layout="" description="" type="small" handler="handlers.ViewWholeWellButtonClicked">
+
+    		</wi-button>
+
+    </wi-toolbar>
+    <wi-toolbar name="Databases4Toolbar" icon="" label="" layout="" description="" type="small">
+    		<wi-button name="AddDepthAxisButton" icon="depth-axis-add-16x16" label="" layout="" description="" type="small" handler="handlers.AddDepthAxisButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="NewTrackButton" icon="logplot-new-16x16" label="" layout="" description="" type="small" handler="handlers.NewTrackButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="DuplicateTrackButton" icon="track-duplicate-16x16" label="" layout="" description="" type="small" handler="handlers.DuplicateTrackButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="DeleteTrackButton" icon="track-delete-16x16" label="" layout="" description="" type="small" handler="handlers.DeleteTrackButtonClicked">
+
+    		</wi-button>
+
+    </wi-toolbar>
+    <wi-toolbar name="Databases5Toolbar" icon="" label="" layout="" description="" type="small">
+    		<wi-button name="AddMarkerButton" icon="marker-add-16x16" label="" layout="" description="" type="small" handler="handlers.AddMarkerButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="AddZoneButton" icon="zone-edit-16x16" label="" layout="" description="" type="small" handler="handlers.AddZoneButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="AnnotationsButton" icon="annotation-16x16" label="" layout="" description="" type="small" handler="handlers.AnnotationsButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="AddImageButton" icon="image-add-16x16" label="" layout="" description="" type="small" handler="handlers.AddImageButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="AddShadingButton" icon="shading-add-16x16" label="" layout="" description="" type="small" handler="handlers.AddShadingButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="RemoveVisualButton" icon="visual-remove-16x16" label="" layout="" description="" type="small" handler="handlers.RemoveVisualButtonClicked">
+
+    		</wi-button>
+
+    </wi-toolbar>
+    <wi-toolbar name="Databases6Toolbar" icon="" label="" layout="" description="" type="small">
+    		<wi-button name="CrossPlotButton" icon="crossplot-new-16x16" label="" layout="" description="" type="small" handler="handlers.CrossPlotButtonClicked">
+
+    		</wi-button>
+    		<wi-button name="HistogramButton" icon="histogram-new-16x16" label="" layout="" description="" type="small" handler="handlers.HistogramButtonClicked">
+
+    		</wi-button>
+
+    </wi-toolbar>
+    <wi-toolbar name="Databases7Toolbar" icon="" label="" layout="" description="" type="">
+    		<wi-checkbox name="FitWindowCheckbox" icon="" label="" layout="" description="" type="">
+
+    		</wi-checkbox>
+    		<wi-checkbox name="ReferenceLineCheckbox" icon="" label="" layout="" description="" type="">
+
+    		</wi-checkbox>
+    		<wi-checkbox name="TooltipCheckbox" icon="" label="" layout="" description="" type="">
+
+    		</wi-checkbox>
 
     </wi-toolbar>
 
